<resources>
    <string name="app_name">Seller TBB</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="visible">visible</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="price">Price:</string>
    <string name="max_price">Max Price:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="recent_product">Recent Product</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="store_name">Store Name</string>
    <string name="store_location">Store Location</string>
    <string name="owner_aadhaar_number">Owner Aadhaar Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="verification_msg">Your email is not verified.\nPlease click the below button and send the verification mail..! </string>
    <string name="verification_issue">Verification Issue</string>
    <string name="product_name">Product name</string>
    <string name="short_summery">Short Description in 150 Characters</string>
    <string name="prices">Price</string>
    <string name="max_prices">Max Price</string>
    <string name="description">Description in 500 Characters</string>
    <string name="quantity">Quantity</string>
    <string name="quantities">Quantity:</string>
    <string name="select_image">Select Image</string>
    <string name="banner">Product show in banner</string>
    <string name="brand_name">Brand Name</string>
    <string name="Price">Price</string>
    <string name="image">image</string>
    <string name="total_amount">Total Amount:</string>
    <string name="payment_status">Payment Status:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="order_status_update">Order Status Update</string>
    <string name="order">Order Received</string>
    <string name="payment_sts">Payment Status</string>
    <string name="payment">Payment</string>
    <string name="payments">Payments</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="rupees">\u20B9</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="account_open_date">Account Created</string>
    <string name="id_number">ID Number</string>
    <string name="sent">Sent mail</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="order_received">Order Received</string>
    <string name="payment_earned">Payment Earned</string>
    <string name="success">Transaction Success</string>
</resources>