<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.CreateAccountActivity">

    <ImageView
        android:id="@+id/imgBackArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textForm"
        app:layout_constraintBottom_toBottomOf="@id/textForm"/>
    <TextView
        android:id="@+id/textForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration_form"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgBackArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/textForm"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/name"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:autofillHints="name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/storeNameRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/store_name"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="12dp"
                android:autofillHints="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/nameRegistration"/>

            <EditText
                android:id="@+id/storeLocationRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/store_location"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="12dp"
                android:autofillHints="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/storeNameRegistration"/>

            <EditText
                android:id="@+id/ownerAadhaarRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/owner_aadhaar_number"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="number"
                android:padding="12dp"
                android:maxLength="12"
                android:autofillHints="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/storeLocationRegistration"/>

            <EditText
                android:id="@+id/phoneNumberRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/phone_number"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="phone"
                android:maxLength="13"
                android:padding="12dp"
                android:autofillHints="phone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/ownerAadhaarRegistration"/>

            <EditText
                android:id="@+id/emailRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/email_address"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:autofillHints="emailAddress"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberRegistration"/>

            <View
                android:id="@+id/viewPwdRegistration"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_bg_drawable"
                app:layout_constraintTop_toBottomOf="@id/emailRegistration"
                app:layout_constraintStart_toStartOf="@id/nameRegistration"
                app:layout_constraintEnd_toEndOf="@id/nameRegistration" />

            <EditText
                android:id="@+id/passwordRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:textColorHint="@color/des"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="password"
                app:layout_constraintEnd_toStartOf="@id/imgVisible"
                app:layout_constraintStart_toStartOf="@id/viewPwdRegistration"
                app:layout_constraintTop_toTopOf="@id/viewPwdRegistration"
                app:layout_constraintBottom_toBottomOf="@id/viewPwdRegistration"/>

            <ImageView
                android:id="@+id/imgVisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility"
                android:background="@android:color/transparent"
                android:onClick="showPassword"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:padding="8dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/visible"
                app:layout_constraintEnd_toEndOf="@id/viewPwdRegistration"
                app:layout_constraintTop_toTopOf="@id/viewPwdRegistration"
                app:layout_constraintBottom_toBottomOf="@id/viewPwdRegistration"/>

            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_bg_drawable"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="@id/nameRegistration"
                app:layout_constraintEnd_toEndOf="@id/nameRegistration"
                app:layout_constraintTop_toBottomOf="@id/passwordRegistration"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>