<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductAddActivity">

    <TextView
        android:id="@+id/textViewProductPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/nightTitle"
        app:layout_constraintBottom_toBottomOf="@id/textViewProductPage"/>

    <ImageView
        android:id="@+id/imageViewDone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_done"
        android:contentDescription="@string/product"
        android:padding="5dp"
        android:background="@drawable/bg_circle"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/textViewProductPage"
        app:layout_constraintTop_toTopOf="@id/textViewProductPage"
        app:layout_constraintBottom_toBottomOf="@id/textViewProductPage"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProductPage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-204dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eProductName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="text"
                android:background="@drawable/edit_bg_drawable"
                android:hint="@string/product_name"
                android:textColorHint="#C6C6C6"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eSubHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/short_summery"
                android:inputType="textMultiLine"
                android:maxHeight="100dp"
                android:maxLength="150"
                android:padding="12dp"
                android:textColorHint="#C6C6C6"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductName" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_bg_drawable"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eSubHeadline"
                tools:listitem="@layout/spinner_text_layout" />

            <EditText
                android:id="@+id/ePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/prices"
                android:inputType="numberDecimal"
                android:maxHeight="100dp"
                android:padding="12dp"
                android:textColorHint="#C6C6C6"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/category_spinner" />

            <EditText
                android:id="@+id/eMaxPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/max_prices"
                android:inputType="numberDecimal"
                android:maxHeight="100dp"
                android:textColorHint="#C6C6C6"
                android:padding="12dp"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/ePrice" />

            <EditText
                android:id="@+id/eQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/quantity"
                android:inputType="number"
                android:maxHeight="100dp"
                android:padding="12dp"
                android:textColorHint="#C6C6C6"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eMaxPrice" />

            <EditText
                android:id="@+id/eBrandName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/brand_name"
                android:inputType="text"
                android:maxHeight="100dp"
                android:padding="12dp"
                android:textColorHint="#C6C6C6"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eQuantity" />

            <EditText
                android:id="@+id/eDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="text"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxHeight="220dp"
                android:padding="12dp"
                android:maxLength="500"
                android:background="@drawable/edit_bg_drawable"
                android:textColor="@color/black"
                android:textColorHint="#C6C6C6"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eBrandName" />

            <TextView
                android:id="@+id/btnSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/select_image"
                android:gravity="center"
                android:background="@drawable/btn_bg_drawable"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eDescription"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@id/btnSelect"
                app:layout_constraintEnd_toEndOf="@id/btnSelect"
                app:layout_constraintTop_toTopOf="@id/btnSelect"
                app:layout_constraintBottom_toBottomOf="@id/btnSelect"/>

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/btnSelect"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/banner"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/imgProductImage"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>