<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/productImages"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtProduct_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productImages"/>

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/nightDes"
            style="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="@id/txtProduct_name"
            app:layout_constraintEnd_toEndOf="@id/txtProduct_name"
            app:layout_constraintTop_toBottomOf="@id/txtProduct_name"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/txtProduct_name"
            app:layout_constraintEnd_toEndOf="@id/txtProduct_name"
            app:layout_constraintTop_toBottomOf="@id/txtSlogan"/>

        <TextView
            android:id="@+id/txtMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_price"
            android:textColor="#D84315"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/txtProduct_name"
            app:layout_constraintTop_toBottomOf="@id/txtPrice"/>

        <TextView
            android:id="@+id/txtMaxPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_price"
            android:textColor="#D84315"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            android:layout_marginStart="05dp"
            app:layout_constraintStart_toEndOf="@id/txtMax"
            app:layout_constraintEnd_toEndOf="@id/txtProduct_name"
            app:layout_constraintTop_toBottomOf="@id/txtPrice"/>

        <TextView
            android:id="@+id/txtDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discount_price"
            android:textColor="#EF6C00"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="@id/txtProduct_name"
            app:layout_constraintTop_toBottomOf="@id/txtMaxPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtDiscountPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discount_price"
            android:textColor="#EF6C00"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            android:layout_marginStart="05dp"
            app:layout_constraintStart_toEndOf="@id/txtDiscount"
            app:layout_constraintEnd_toEndOf="@id/txtProduct_name"
            app:layout_constraintTop_toTopOf="@id/txtDiscount"
            app:layout_constraintBottom_toBottomOf="@id/txtDiscount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>